--- a/index.html
+++ b/index.html
@@ -7,27 +7,81 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bai+Jamjuree:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
-    <title>Em busca da joia mexicana</title>
+    <title>EM BUCA DA JOIA PERDIDA</title>
 </head>
 <body>
     <main>
         <div class="passo ativo" id="passo-0">
-            <img src="primeiro 1.png" alt="">
-            <p>Um dia desses, dentro de um livro da biblioteca da escola, eu descobri uma carta antiga sobre uma joia perdida, escondida por riquezas e belezas naturais. Nessa carta, a autora deixa algumas pistas para encontrar essa cidade e eu decidi segui-las!</p>
+            <img src="img/cenario-passo0.png" alt="">
+            <p>Um dia desses, dentro de um livro da biblioteca da escola, eu descobri uma carta antiga sobre uma joia perdida, escondida por riquezas e belezas naturais. Nessa carta, a autora deixa algumas pistas para encontrar essa joia e eu decidi segui-las!</p>
             <button class="btn-proximo" data-proximo="1">Cancún</button>
             <button class="btn-proximo" data-proximo="2">Acapulco</button>
         </div>
         <div class="passo" id="passo-1">
-            <img src="terceiro.png" alt="">
-            <p>Você começa sua jornada em Cancún, subindo a montanha Tepozteco ao amanhecer para encontrar a primeira pista.</p>
-            <button class="btn-proximo" data-proximo="3">Procurar a pista no topo da montanha</button>
+            <p>Você começa sua jornada em Cancún, subindo o Pico de Orizaba ao amanhecer para encontrar a primeira pista.</p>
+            <button class="btn-proximo" data-proximo="3">Procurar a pista no topo do pico</button>
             <button class="btn-proximo" data-proximo="4">Desistir e voltar para casa</button>
         </div>
         <div class="passo" id="passo-2">
-            <img src="segundo.png" alt="">
-            <p>Em Acapulco, você visita a cidade de La Quebrada. Na carta, uma das pistas indica que para localizar a entrada para a joia perdida você deve procurar a próxima pista em um dos pontos turísticos da cidade. Por qual você começa?</p>
-            <button class="btn-proximo" data-proximo="5">Investigar as montanhas</button>
+            <p>Em Acapulco, você visita o histórico bairro La Quebrada. Na carta, uma das pistas indica que para localizar a joia perdida você deve procurar a próxima pista em um dos pontos turísticos da cidade. Por qual você começa?</p>
+            <button class="btn-proximo" data-proximo="5">Investigar as igrejas antigas</button>
             <button class="btn-proximo" data-proximo="6">Explorar as praias próximas</button>
+        </div>
+        <div class="passo" id="passo-3">
+            <p>No topo do Pico de Orizaba, você encontra uma antiga inscrição apontando que a próxima pista está
+                localizada em Sonora.</p>
+            <button class="btn-proximo" data-proximo="7">Seguir para Sonora</button>
+        </div>
+
+        <div class="passo" id="passo-4">
+            <img src="img/cenario-passo4-voltar-casa.png" alt="imagem voltando para casa e desitindo da aventura">
+            <p>Você decide que a aventura é grande demais e volta para casa, mas sempre se pergunta o que teria
+                encontrado.</p>
+        </div>
+
+        <div class="passo" id="passo-5">
+            <p>Nas igrejas de Acapulco, você descobre um mapa antigo escondido atrás de um altar, apontando que a próxima
+                pista está em Sonora.</p>
+            <button class="btn-proximo" data-proximo="7">Viajar para Sonora</button>
+        </div>
+
+        <div class="passo" id="passo-6">
+            <p>Explorando as praias, você encontra uma caverna escondida, mas ela leva a um beco sem saída.</p>
+            <button class="btn-proximo" data-proximo="8">Voltar e explorar as igrejas</button>
+        </div>
+
+        <div class="passo" id="passo-7">
+            <p>Em Sonora, a busca pela joia perdida se intensifica. Você se depara com um rio bifurcado.</p>
+            <button class="btn-proximo" data-proximo="9">Seguir pelo rio à esquerda</button>
+            <button class="btn-proximo" data-proximo="10">Seguir pelo rio à direita</button>
+        </div>
+
+        <div class="passo" id="passo-8">
+            <p>De volta às igrejas, você finalmente encontra o mapa antigo. Agora, para Sonora!</p>
+            <button class="btn-proximo" data-proximo="7">Seguir para Sonora</button>
+        </div>
+
+        <div class="passo" id="passo-9">
+            <p>O rio à esquerda leva você a uma cachoeira escondida com inscrições antigas que revelam a entrada de uma caverna para achar a joia perdida</p>
+            <button class="btn-proximo" data-proximo="11">Explorar a caverna</button>
+        </div>
+
+        <div class="passo" id="passo-10">
+            <p>O rio à direita termina em uma área pantanosa. Apesar de belas vistas, não há sinais da joia perdida
+                aqui.</p>
+            <button class="btn-proximo" data-proximo="12">Retornar e tentar o outro rio</button>
+        </div>
+
+        <div class="passo" id="passo-11">
+            <img src="img/cenario-passo12-cidade-perdida.png" alt="encontrando uma cidade maravilhosa perdida no Amazonas">
+            <p>Dentro da caverna, você descobre tesouros inimagináveis e a joia perdida, e decide se dedicar a estudar e preservar
+                este lugar</p>
+        </div>
+
+        <div class="passo" id="passo-12">
+            <p>Retornando e escolhendo o rio à esquerda, você finalmente encontra a cachoeira escondida e as inscrições
+                que levam à uma caverna que leva à joia perdida.</p>
+            <button class="btn-proximo" data-proximo="11">Explorar a caverna</button>
         </div>
     </main>
     <script src="script.js"></script>
