--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         </div>
 
         <div class="passo" id="passo-9">
-            <img src=caverna2.png alt="">
+            <img src=cachoeira.png alt="">
             <p>O rio à esquerda leva você a uma cachoeira escondida com inscrições antigas que revelam a entrada de uma caverna para achar a joia perdida</p>
             <button class="btn-proximo" data-proximo="11">Explorar a caverna</button>
         </div>
