--- a/index.html
+++ b/index.html
@@ -12,88 +12,88 @@
 <body>
     <main>
         <div class="passo ativo" id="passo-0">
-            <img src="imagens/biblioteca.png" alt="">
+            <img src="img/biblioteca.png">
             <p>Um dia desses, dentro de um livro da biblioteca da escola, eu descobri uma carta antiga sobre uma joia perdida, escondida por riquezas e belezas naturais. Nessa carta, a autora deixa algumas pistas para encontrar essa joia e eu decidi segui-las!</p>
             <button class="btn-proximo" data-proximo="1">Cancún</button>
             <button class="btn-proximo" data-proximo="2">Acapulco</button>
         </div>
         <div class="passo" id="passo-1">
-            <img src="imagens/picoorizaba.png" alt="">
+            <img src="img/picoorizaba.png">
             <p>Você começa sua jornada em Cancún, subindo o Pico de Orizaba ao amanhecer para encontrar a primeira pista.</p>
             <button class="btn-proximo" data-proximo="3">Procurar a pista no topo do pico</button>
             <button class="btn-proximo" data-proximo="4">Desistir e voltar para casa</button>
         </div>
         <div class="passo" id="passo-2">
-            <img src="imagens/acapulco.png" alt="">
+            <img src="img/acapulco.png">
             <p>Em Acapulco, você visita o histórico bairro La Quebrada. Na carta, uma das pistas indica que para localizar a joia perdida você deve procurar a próxima pista em um dos pontos turísticos da cidade. Por qual você começa?</p>
             <button class="btn-proximo" data-proximo="5">Investigar as igrejas antigas</button>
             <button class="btn-proximo" data-proximo="6">Explorar as praias próximas</button>
         </div>
         <div class="passo" id="passo-3">
-            <img src="imagens/pergaminho.png" alt="">
+            <img src="img/pergaminho.png">
             <p>No topo do Pico de Orizaba, você encontra uma antiga inscrição apontando que a próxima pista está
                 localizada em Sonora.</p>
             <button class="btn-proximo" data-proximo="7">Seguir para Sonora</button>
         </div>
 
         <div class="passo" id="passo-4">
-            <img src="imagens/tristecasa.png" alt="">
+            <img src="img/tristecasa.png">
             <p>Você decide que a aventura é grande demais e volta para casa, mas sempre se pergunta o que teria
                 encontrado.</p>
         </div>
 
         <div class="passo" id="passo-5">
-         <img src="imagens/mapa.png" alt="">
+         <img src="img/">
             <p>Nas igrejas de Acapulco, você descobre um mapa antigo escondido atrás de um altar, apontando que a próxima
                 pista está em Sonora.</p>
             <button class="btn-proximo" data-proximo="7">Viajar para Sonora</button>
         </div>
 
         <div class="passo" id="passo-6">
-            <img src="imagens/caverna.png" alt="">
+            <img src="img/caverna.png">
             <p>Explorando as praias, você encontra uma caverna escondida, mas ela leva a um beco sem saída.</p>
             <button class="btn-proximo" data-proximo="8">Voltar e explorar as igrejas</button>
         </div>
 
         <div class="passo" id="passo-7">
-            <img src="imagens/rio.png" alt="">
+            <img src="img/rio.png">
             <p>Em Sonora, a busca pela joia perdida se intensifica. Você se depara com um rio bifurcado.</p>
             <button class="btn-proximo" data-proximo="9">Seguir pelo rio à esquerda</button>
             <button class="btn-proximo" data-proximo="10">Seguir pelo rio à direita</button>
         </div>
 
         <div class="passo" id="passo-8">
-            <img src="imagens/mapa.png" alt="">
+            <img src="img/biblioteca.png">
             <p>De volta às igrejas, você finalmente encontra o mapa antigo. Agora, para Sonora!</p>
             <button class="btn-proximo" data-proximo="7">Seguir para Sonora</button>
         </div>
 
         <div class="passo" id="passo-9">
-            <img src="imagens/cachoeira.png" alt="">
+            <img src="img/cachoeira.png">
             <p>O rio à esquerda leva você a uma cachoeira escondida com inscrições antigas que revelam a entrada de uma caverna para achar a joia perdida</p>
             <button class="btn-proximo" data-proximo="11">Explorar a caverna</button>
         </div>
 
         <div class="passo" id="passo-10">
-            <img src="imagens/pantano.png" alt="">
+            <img src="img/pantano.png">
             <p>O rio à direita termina em uma área pantanosa. Apesar de belas vistas, não há sinais da joia perdida
                 aqui.</p>
             <button class="btn-proximo" data-proximo="12">Retornar e tentar o outro rio</button>
         </div>
 
         <div class="passo" id="passo-11">
-            <img src="imagens/caverna3.png" alt="">
+            <img src="img/caverna3.png">
             <p>Dentro da caverna, você descobre tesouros inimagináveis e a joia perdida, e decide se dedicar a estudar e preservar
                 este lugar</p>
         </div>
 
         <div class="passo" id="passo-12">
-        <img src="imagens/cachoeira.png" alt="">
+        <img src="img/cachoeira.png">
             <p>Retornando e escolhendo o rio à esquerda, você finalmente encontra a cachoeira escondida e as inscrições
                 que levam à uma caverna que leva à joia perdida.</p>
             <button class="btn-proximo" data-proximo="11">Explorar a caverna</button>
         </div>
     </main>
-    <script src="imagens/"script.js"></script>
+    <script src="img/"script.js"></script>
 </body>
 </html>
