--- a/index.html
+++ b/index.html
@@ -94,6 +94,6 @@
             <button class="btn-proximo" data-proximo="11">Explorar a caverna</button>
         </div>
     </main>
-    <script src="img/"script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
